# anonbr

./: .dockerignore  .gitignore  BUG_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  OUTPUT_EXEMPLE.md  README.md  UPDATES.md  main.py  pyproject.toml
.github/workflows/: tests.yml
ad-hocs/: macgyver.py
anonbr/: __init__.py  anonymizer.py  pattern_loader.py
anonbr/detectors/: __init__.py  anonymizer.py  cnpj.py  cpf.py  email.py  pdf.py  telefone.py
config/: patterns.yaml
exemples/: dados_exemplo.csv  dados_teste_validacao.csv
exemples/anonymized_data/: censurados.csv  teste_2.csv
tests/: test_cnpj.py  test_cpf.py  test_email.py  test_pattern_loader.py  test_pdf.py  test_telefone.py
