[project]
name = "anonbr"
version = "1.0"
description = "Ferramenta para ocultar dados pessoais em DataFrames."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yuri Pontes", email = "yuripontes.cont@gmail.com"}
]
keywords = ["lgpd", "pii", "anonymization", "privacy", "cpf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yurivski"
Repository = "https://github.com/yurivski/anonbr"
Documentation = "https://github.com/yurivski/anonbr#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
